PAGOS Y COMPROBANTE DE PAGO

--- a/src/main/resources/templates/clientes/compraSeguros.html
+++ b/src/main/resources/templates/clientes/compraSeguros.html
@@ -16,7 +16,7 @@
         <li><a th:href="@{dashboard}">Inicio</a></li>
         <li><a th:href="@{compraSeguros}">Comprar seguros</a></li>
         <li><a th:href="@{polizasUsuarios}">Gestionar seguros</a></li>
-        <li><a th:href="@{pagosUsuarios}">Gestión de Pagos</a></li>
+        <li><a th:href="@{/clientes/gestionPagos}">Gestión de Pagos</a></li>
         <li><a th:href="@{contacto}">Contacto</a></li>
       </ul>
     </nav>
