--- a/src/main/resources/templates/clientes/polizasUsuarios.html
+++ b/src/main/resources/templates/clientes/polizasUsuarios.html
@@ -15,7 +15,7 @@
         <li><a th:href="@{dashboard}">Inicio</a></li>
         <li><a th:href="@{compraSeguros}">Comprar seguros</a></li>
         <li><a th:href="@{polizasUsuarios}">Gestionar seguros</a></li>
-        <li><a th:href="@{pagosUsuarios}">Gestión de Pagos</a></li>
+        <li><a th:href="@{/clientes/gestionPagos}">Gestión de Pagos</a></li>
         <li><a th:href="@{contacto}">Contacto</a></li>
       </ul>
     </nav>
@@ -74,10 +74,10 @@
             <td>
                 <!-- Usar comillas simples y verificar el texto exacto -->
                 <form th:if="${poliza.estado == 'pago pendiente'}"
-                      th:action="@{'/misPolizas/enviarAPagos/' + ${poliza.id_poliza}}"
-                      method="post">
-                    <input type="hidden" name="documento" th:value="${cliente.documento}" />
-                    <button type="submit" class="btn btn-primary">Ir a Pagar</button>
+                      th:action="@{/clientes/gestionPagos}"
+                      method="get">
+                    <input type="hidden" name="polizaId" th:value="${poliza.id_poliza}" />
+                    <button type="submit" class="btn btn-primary">Enviar a Pagos</button>
                 </form>
 
                 <!-- MOSTRAR "Sin acciones requeridas" para otros estados -->
