--- a/src/main/resources/templates/administradores/dashboard.html
+++ b/src/main/resources/templates/administradores/dashboard.html
@@ -30,7 +30,7 @@
         <li><a th:href="@{registroSeguros}">Gestión de Seguros</a></li>
         <li><a th:href="@{gestionClientes}">Gestión de Clientes</a></li>
         <li><a th:href="@{gestionPolizas}">Gestión de Pólizas</a></li>
-        <li><a th:href="@{informes}">Informes y Estadísticas</a></li>
+        <!-- <li><a th:href="@{informes}">Informes y Estadísticas</a></li> -->
         <li><a th:href="@{registroAdministrador}">Registrar Administradores</a></li>
       </ul>
     </nav>
