--- a/src/main/resources/templates/administradores/registroSeguros.html
+++ b/src/main/resources/templates/administradores/registroSeguros.html
@@ -18,7 +18,7 @@
         <li><a th:href="@{registroSeguros}" class="active">Gestión Seguros</a></li>
         <li><a th:href="@{gestionClientes}">Gestión Clientes</a></li>
         <li><a th:href="@{gestionPolizas}" >Gestión Pólizas</a></li>
-        <li><a th:href="@{informes}">Informes y Estadísticas</a></li>
+                <!-- <li><a th:href="@{informes}">Informes y Estadísticas</a></li> -->
         <li><a th:href="@{registroAdministrador}">Registrar Administradores</a></li>
       </ul>
     </nav>
