--- a/src/main/resources/templates/administradores/gestionClientes.html
+++ b/src/main/resources/templates/administradores/gestionClientes.html
@@ -19,7 +19,7 @@
         <li><a th:href="@{registroSeguros}">Gestión Seguros</a></li>
         <li><a th:href="@{gestionClientes}" class="active">Gestión Clientes</a></li>
         <li><a th:href="@{gestionPolizas}">Gestión Pólizas</a></li>
-        <li><a th:href="@{informes}">Informes y Estadísticas</a></li>
+        <!-- <li><a th:href="@{informes}">Informes y Estadísticas</a></li> -->        
         <li><a th:href="@{registroAdministrador}">Registrar Administradores</a></li>
       </ul>
     </nav>
