--- a/src/main/resources/templates/administradores/gestionPolizas.html
+++ b/src/main/resources/templates/administradores/gestionPolizas.html
@@ -17,7 +17,7 @@
         <li><a th:href="@{registroSeguros}">Gestión Seguros</a></li>
         <li><a th:href="@{gestionClientes}">Gestión Clientes</a></li>
         <li><a th:href="@{gestionPolizas}" class="active">Gestión Pólizas</a></li>
-        <li><a th:href="@{informes}">Informes y Estadísticas</a></li>
+               <!-- <li><a th:href="@{informes}">Informes y Estadísticas</a></li> -->
         <li><a th:href="@{registroAdministrador}">Registrar Administradores</a></li>
       </ul>
     </nav>
